# boat_control

./: .config  .gitignore  DEPLOYMENT_FILES.md  README.md  baseline.csv  candidate.csv  package-lock.json  pyproject.toml  trigger.py
backend/: manage.py
data/: db.sqlite3
docs/: 0_file_naming_convention.md  20260718_api_contract.md  20260718_api_reference.md  20260718_backend_setup.md  20260718_browser_journey.md  20260718_contract_api_final.md  20260718_contract_performance_and_pagination.md  20260718_contract_rule_evaluation.md  20260718_contract_single_port_delivery.md  20260718_exports_api.md  20260718_files_api.md  20260718_filters_api.md  20260718_handoff_worker_matrix.md  20260718_persistence_api.md  20260718_reference_api_contract.md  20260718_reference_client_threat_model.md  20260718_reference_frontend_guide.md  20260718_reference_operations_guide.md  20260718_reference_ui_workflows.md  20260718_repo_cleanup.md  20260718_rule_semantics.md  20260718_rules_api.md  20260718_runs_api.md  20260720_bug_analysis_grouping_tree_editor.md  20260720_session_changelog_detail_table_and_ui_refinements.md  20260721_csv_type_inference_fix.md  20260721_phase4_group_statistics_backend.md  20260721_phase5_detail_filters_and_applied_filter.md  20260721_phase6_group_statistics_presentation.md  20260721_session_changelog_results_and_config_fix.md  20260722_family_config_api.md  20260723_excel_export_and_html_row_materialization.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
planning/: 20260718_followups_worker_a.md  20260718_followups_worker_b.md  20260718_plan_folder_structure.md  20260718_required_changes_after_second_review.md  20260718_requirements_single_port_and_final_fixes.md  20260718_requirements_worker_c_dependency_resolution.md  20260718_tasks_worker_a.md  20260718_tasks_worker_b.md  20260719_round2_worker_instruction.md  20260721_enhancement_worker_instruction.md  20260722_round2_worker_instruction.md  20260723_results_responsive_display_fix_worker_instruction.md
requirements/: 20260717_initial_requirement.md  20260718_configuration_and_sources_enhancement.md  20260719_bug_and_enhancements.md  20260721_enhancement_requirement.md  20260721_runtime_error_fix.md  20260722_bug_enhancement.md
reviews/: 20260718_review_convergence_second_pass.md  20260718_review_convergence_third_pass.md  (+10 more)
scripts/: dev.sh  (+1 more)
(+195 files in other folders)
